Funcional2/src/lf2/plp/functional2/parser/Func2Parser.java
/* Func2Parser.java */
/* Generated By:JavaCC: Do not edit this line. Func2Parser.java */
package lf2.plp.functional2.parser;
import java.util.ArrayList;
import java.util.List;
//Imports da Funcional2
import lf2.plp.functional2.Programa;
import lf2.plp.functional2.declaration.DecRequisito;
import lf2.plp.functional2.declaration.DecFuncao;
import lf2.plp.functional1.declaration.DecComposta;
import lf2.plp.functional2.expression.ValorFuncao;
import lf2.plp.functional2.expression.ExpDeclaracao;
import lf2.plp.functional2.expression.Aplicacao;
//Imports da Funcional1
import lf2.plp.functional1.declaration.DeclaracaoFuncional;
import lf2.plp.functional1.declaration.DecVariavel;
import lf2.plp.functional1.expression.IfThenElse;
//Imports da Express�o2
import lf2.plp.expressions2.expression.Expressao;
import lf2.plp.expressions2.expression.Valor;
import lf2.plp.expressions2.expression.ValorInteiro;
import lf2.plp.expressions2.expression.ValorString;
import lf2.plp.expressions2.expression.ValorBooleano;
import lf2.plp.expressions2.expression.Id;
import lf2.plp.expressions2.expression.ExpMenos;
import lf2.plp.expressions2.expression.ExpNot;
import lf2.plp.expressions2.expression.ExpLength;
import lf2.plp.expressions2.expression.ExpSoma;
import lf2.plp.expressions2.expression.ExpSub;
import lf2.plp.expressions2.expression.ExpAnd;
import lf2.plp.expressions2.expression.ExpOr;
import lf2.plp.expressions2.expression.ExpEquals;
import lf2.plp.expressions2.expression.ExpConcat;

//Imports da Expressao1
public class Func2Parser implements Func2ParserConstants {
  public static void main(String args [])
  {
    Func2Parser parser;
    if (args.length == 0)
    {
      System.out.println("Funcional 2 PLP Parser Version 0.0.1:  Reading from standard input . . .");
      parser = new Func2Parser(System.in);
    }
    else if (args.length == 1)
    {
      System.out.println("Funcional 2 PLP Parser Version 0.0.1:  Reading from file " + args [0] + " . . .");
      try
      {
        parser = new Func2Parser(new java.io.FileInputStream(args [0]));
      }
      catch (java.io.FileNotFoundException e)
      {
        System.out.println("Funcional 2 PLP Parser Version 0.0.1:  File " + args [0] + " not found.");
        return;
      }
    }
    else
    {
      System.out.println("Funcional 2 PLP Parser Version 0.0.1:  Usage is one of:");
      System.out.println("         java Func2Parser < inputfile");
      System.out.println("OR");
      System.out.println("         java Func2Parser inputfile");
      return;
    }
    Programa programa = null;
    try
    {
      programa = parser.Input();

      if (!programa.checaTipo())
          {
            System.out.println("Funcional 2 PLP Parser Version 0.0.1: Erro! ");
        System.exit(0);
      }

      System.out.println("Funcional 2 PLP Parser Version 0.0.1: Funcional 2 program parsed successfully.");
    }
    catch (ParseException e)
    {
      e.printStackTrace();
      System.out.println("Funcional 2 PLP Parser Version 0.0.1: Encountered errors during parse.");
      System.exit(0);
    }
    try
    {
      System.out.println("Funcional 2 PLP Parser Version 0.0.1: running...");
      Valor val = (Valor) programa.executar();
      if (val instanceof ValorString)
      {
        ValorString valStr = (ValorString) val;
        System.out.println("Funcional 2 PLP Parser Version 0.0.1: resultado=" + valStr.valor());
      }
      else if (val instanceof ValorInteiro)
      {
        ValorInteiro valInt = (ValorInteiro) val;
        System.out.println("Funcional 2 PLP Parser Version 0.0.1: resultado=" + valInt.valor());
      }
      else if (val instanceof ValorBooleano)
      {
        ValorBooleano valBool = (ValorBooleano) val;
        System.out.println("Funcional 2 PLP Parser Version 0.0.1: resultado=" + valBool.valor());
      }
      else if (val instanceof ValorFuncao)
      {
        ValorFuncao valFunc = (ValorFuncao) val;
        System.out.println("Funcional 2 PLP Parser Version 0.0.1: resultado = " + val);
      }
    }
    catch (Exception e)
    {
      e.printStackTrace();
      System.out.println("Funcional 2 PLP Parser Version 0.0.1:  Encountered errors during execution.");
    }
  }

  static final public Programa Input() throws ParseException {
    trace_call("Input");
    try {
Programa retorno;
      retorno = PPrograma();
      jj_consume_token(0);
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Input");
    }
}

  static final public Valor PValorInteiro() throws ParseException {
    trace_call("PValorInteiro");
    try {
Token token;
      token = jj_consume_token(INTEGER_LITERAL);
//System.out.println("ValorInteiro=" + token.toString());
    {if ("" != null) return new ValorInteiro(Integer.parseInt(token.toString()));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorInteiro");
    }
}

  static final public Valor PValorBooleano() throws ParseException {
    trace_call("PValorBooleano");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FALSE:{
        jj_consume_token(FALSE);
{if ("" != null) return new ValorBooleano(false);}
        break;
        }
      case TRUE:{
        jj_consume_token(TRUE);
{if ("" != null) return new ValorBooleano(true);}
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorBooleano");
    }
}

  static final public Valor PValorString() throws ParseException {
    trace_call("PValorString");
    try {
Token token;
      token = jj_consume_token(STRING_LITERAL);
//		System.out.println("ValorString=" + token.toString().length());
    String tokenStr = token.toString();
    tokenStr = tokenStr.substring(1, tokenStr.length() - 1);
    {if ("" != null) return new ValorString(tokenStr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorString");
    }
}

  static final public Valor PValorFuncao() throws ParseException {
    trace_call("PValorFuncao");
    try {
List lista = null;
  Expressao expressao;
      jj_consume_token(FN);
      lista = PListaId();
      jj_consume_token(DOT);
      expressao = PExpressao();
{if ("" != null) return new ValorFuncao(lista, expressao);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorFuncao");
    }
}

  static final public Valor PValor() throws ParseException {
    trace_call("PValor");
    try {
Valor retorno;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:{
        retorno = PValorInteiro();
        break;
        }
      case TRUE:
      case FALSE:{
        retorno = PValorBooleano();
        break;
        }
      case STRING_LITERAL:{
        retorno = PValorString();
        break;
        }
      case FN:{
        retorno = PValorFuncao();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValor");
    }
}

  static final public Id PId() throws ParseException {
    trace_call("PId");
    try {
Token token;
      token = jj_consume_token(IDENTIFIER);
//System.out.println("Id=" + token.toString());
    //System.out.println("tam id=" + token.toString().length());
    String tokenStr = token.toString();
    //		tokenStr = tokenStr.substring(1,tokenStr.length()-1);
    {if ("" != null) return new Id(tokenStr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PId");
    }
}

  static final public Expressao PExpMenos() throws ParseException {
    trace_call("PExpMenos");
    try {
Expressao retorno;
      jj_consume_token(MINUS);
      retorno = PExpPrimaria();
{if ("" != null) return new ExpMenos(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpMenos");
    }
}

  static final public Expressao PExpNot() throws ParseException {
    trace_call("PExpNot");
    try {
Expressao retorno;
      jj_consume_token(NOT);
      retorno = PExpPrimaria();
{if ("" != null) return new ExpNot(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpNot");
    }
}

  static final public Expressao PExpLength() throws ParseException {
    trace_call("PExpLength");
    try {
Expressao retorno;
      jj_consume_token(LENGTH);
      retorno = PExpPrimaria();
if (retorno instanceof ValorString)
    {
      ValorString val = (ValorString) retorno;
      //		    System.out.println("Length val=" + val.valor());
    }
    //		System.out.println("1-" + retorno.toString());
    {if ("" != null) return new ExpLength(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpLength");
    }
}

  static final public Expressao PExpPrimaria() throws ParseException {
    trace_call("PExpPrimaria");
    try {
Expressao retorno;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case FN:
      case INTEGER_LITERAL:
      case STRING_LITERAL:{
        retorno = PValor();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        if (jj_2_1(2147483647)) {
          retorno = PAplicacao();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IDENTIFIER:{
            retorno = PId();
            break;
            }
          case LPAREN:{
            jj_consume_token(LPAREN);
            retorno = PExpressao();
            jj_consume_token(RPAREN);
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpPrimaria");
    }
}

  static final public Expressao PAplicacao() throws ParseException {
    trace_call("PAplicacao");
    try {
Id id;
  List lista;
      id = PId();
      jj_consume_token(LPAREN);
      lista = PListaExpr();
      jj_consume_token(RPAREN);
{if ("" != null) return new Aplicacao(id, lista);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PAplicacao");
    }
}

  static final public List PListaId() throws ParseException {
    trace_call("PListaId");
    try {
List retorno = null;
  Id id;
      label_1:
      while (true) {
        id = PId();
if (retorno == null)
      {
        retorno = new ArrayList();
        retorno.add(id);
      }
      else
      {
        retorno.add(id);
      }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_1;
        }
      }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PListaId");
    }
}

  static final public DeclaracaoFuncional PDeclVar() throws ParseException {
    trace_call("PDeclVar");
    try {
Id id;
  Expressao expressao;
  DeclaracaoFuncional retorno;
      jj_consume_token(VAR);
      id = PId();
      jj_consume_token(ASSIGN);
      expressao = PExpressao();
{if ("" != null) return new DecVariavel(id, expressao);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PDeclVar");
    }
}

  static final public DeclaracaoFuncional PDeclFuncao() throws ParseException {
    trace_call("PDeclFuncao");
    try {
Id id;
  Expressao expressao;
  DeclaracaoFuncional retorno;
  List lista;
  DecRequisito decRequisito;
      decRequisito = PDeclRequisito();
      jj_consume_token(FUNC);
      id = PId();
      lista = PListaId();
      jj_consume_token(ASSIGN);
      expressao = PExpressao();
{if ("" != null) return new DecFuncao(id, new ValorFuncao(lista, expressao), decRequisito);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PDeclFuncao");
    }
}

  static final public DecRequisito PDeclRequisito() throws ParseException {
    trace_call("PDeclRequisito");
    try {
List lista;
      jj_consume_token(REQ);
      lista = PListaId();
{if ("" != null) return new DecRequisito(lista);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PDeclRequisito");
    }
}

  static final public DecComposta PDecComposta() throws ParseException {
    trace_call("PDecComposta");
    try {
DeclaracaoFuncional d1;
        DeclaracaoFuncional d2;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAR:{
        d1 = PDeclVar();
        break;
        }
      case REQ:{
        d1 = PDeclFuncao();
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(COMMA);
      d2 = PDeclFuncional();
{if ("" != null) return new DecComposta(d1, d2);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PDecComposta");
    }
}

  static final public DeclaracaoFuncional PDeclFuncional() throws ParseException {
    trace_call("PDeclFuncional");
    try {
DeclaracaoFuncional decl;
      if (jj_2_2(2147483647)) {
        decl = PDecComposta();
      } else if (jj_2_3(2147483647)) {
        decl = PDecComposta();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case VAR:{
          decl = PDeclVar();
          break;
          }
        case REQ:{
          decl = PDeclFuncao();
          break;
          }
        case LPAREN:{
          jj_consume_token(LPAREN);
          decl = PDeclFuncional();
          jj_consume_token(RPAREN);
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
{if ("" != null) return decl;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PDeclFuncional");
    }
}

  static final public Expressao PExpDeclaracao() throws ParseException {
    trace_call("PExpDeclaracao");
    try {
DeclaracaoFuncional declaracoes;
  Expressao expressao;
      jj_consume_token(LET);
      declaracoes = PDeclFuncional();
      jj_consume_token(IN);
      expressao = PExpressao();
{if ("" != null) return new ExpDeclaracao(declaracoes, expressao);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpDeclaracao");
    }
}

  static final public Expressao PExpCondicional() throws ParseException {
    trace_call("PExpCondicional");
    try {
Expressao expCond, expThen, expElse;
      jj_consume_token(IF);
      expCond = PExpressao();
      jj_consume_token(THEN);
      expThen = PExpressao();
      jj_consume_token(ELSE);
      expElse = PExpressao();
{if ("" != null) return new IfThenElse(expCond, expThen, expElse);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpCondicional");
    }
}

  static final public List PListaExpr() throws ParseException {
    trace_call("PListaExpr");
    try {
List retorno = null;
  Expressao expr;
      expr = PExpressao();
retorno = new ArrayList();
      retorno.add(expr);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        expr = PExpressao();
retorno.add(expr);
      }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PListaExpr");
    }
}
